--- a/WingtipToys/WingtipToys.csproj
+++ b/WingtipToys/WingtipToys.csproj
@@ -177,6 +177,12 @@
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\apple.png" />
+    <Content Include="Content\Images\harddrive.png" />
+    <Content Include="Content\Images\home.png" />
+    <Content Include="Content\Images\safari.png" />
+    <Content Include="Content\Images\tools.png" />
+    <Content Include="Content\Menu.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
