--- a/WingtipToys/WingtipToys.csproj
+++ b/WingtipToys/WingtipToys.csproj
@@ -179,7 +179,11 @@
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\acceuil.png" />
     <Content Include="Content\Images\apple.png" />
+    <Content Include="Content\Images\apropos.png" />
+    <Content Include="Content\Images\contact.png" />
+    <Content Include="Content\Images\galerie.png" />
     <Content Include="Content\Images\harddrive.png" />
     <Content Include="Content\Images\home.png" />
     <Content Include="Content\Images\safari.png" />
