--- a/WingtipToys/WingtipToys.csproj
+++ b/WingtipToys/WingtipToys.csproj
@@ -184,8 +184,10 @@
     <Content Include="Content\Images\apropos.png" />
     <Content Include="Content\Images\contact.png" />
     <Content Include="Content\Images\fond-center.png" />
+    <Content Include="Content\Images\fond-centerold.png" />
     <Content Include="Content\Images\fond-login.png" />
     <Content Include="Content\Images\fond.png" />
+    <Content Include="Content\Images\footer.png" />
     <Content Include="Content\Images\galerie.png" />
     <Content Include="Content\Images\harddrive.png" />
     <Content Include="Content\Images\home.png" />
