--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\WingtipToys Class\packages.config" />
+  <repository path="..\WingtipToys.Model\packages.config" />
   <repository path="..\WingtipToys\packages.config" />
 </repositories>
