--- a/WingtipToys/bin/WingtipToys.dll.config
+++ b/WingtipToys/bin/WingtipToys.dll.config
@@ -9,8 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="wingtiptoysEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\wingtiptoys.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WingtipToys-20150723012345.mdf;Initial Catalog=aspnet-WingtipToys-20150723012345;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="wingtiptoysEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\wingtiptoys.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="wingtiptoysEntities" connectionString="Data Source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\wingtiptoys.mdf;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"   connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WingtipToys-20150723012345.mdf;Initial Catalog=aspnet-WingtipToys-20150723012345;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
